# toy-robot

./: .gitignore  BACKLOG.md  Readme  Readme.md  mac_main.py  main.py  onnx_test.py  pyproject.toml  requirements.txt  run_mac.sh  sync.sh  test_grayscale.py  test_wheels.py
docs/: glossary.md
memorylib/: pyproject.toml
memorylib/src/memorylib/: __init__.py  cli.py  episodic.py  face.py  face_cli.py  graph.py  manager.py  media.py  reflect.py  speaker.py
memorylib/tests/: test_episodic.py  test_face.py  test_graph.py  test_manager.py  test_media.py  test_speaker.py
models/: hey_jarvis_v0.1.onnx
scripts/: clean_memory.py  diagnose.sh  download_model.sh  enroll_speaker.py  main_mac.py  main_pi.py  setup_piper.sh  setup_rpi.sh
src/: config.py  main.py  server.py
src/behaviors/: generation.py  listening.py  safety.py  speech.py
src/hardware/: api.py  camera.py  grayscale.py  head.py  kokoro_speaker.py  listener.py  macos_camera.py  macos_listener.py  macos_speaker.py  mock_hardware.py  speaker.py  wake_word.py  wheels.py
src/lib/: command_recorder.py  gemini.py  graph_store.py  media_store.py  memory.py  memory_manager.py  robot_memory.py  robot_session.py  speaker_id.py  speech.py
src/services/: api.py  conversation.py  listener.py  llm.py  macos_listener.py  mock_services.py  tools.py  wake_word.py
static/: index.html  worklet.js
tests/: test_grayscale.py  test_memory.py  test_wheels.py
tests/hardware/: test_wake_word.py
tests/lib/: test_command_recorder.py  test_graph_store.py  test_memory_manager.py  test_robot_session.py  test_speaker_id.py
